css issue fixed for desktopsidebar and sidebar component visibility

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @config "../tailwind.config.ts";
 
 html,
-body:root {
+body,
+:root {
   height: 100%;
 }
